# utils

./: .gitignore  LICENSE  README.md  pyproject.toml
bat/: _template.bat  _template_py.bat  colors.bat  myenv_template.bat  p.bat  va.bat  vc.bat
requirements/: requirements-dev.txt  requirements.txt
resources/: color_brewer_license.md  color_themes.json  colorbrewer.json  emoji.json  set_vars_template.bat  styles.json
resources/bat/: bat_set_vars_template.bat
resources/bat_env_test/: clear_env_hugo.bat  py_set_env_hugo.bat  read_env_hugo.bat  read_env_hugo.py  set_env_hugo.bat  set_env_hugo.py
resources/boilerplates/: new_module_copy_paste.py
src/: cli.py
src/app/: exif_tool_wrapper.py  image_profile_meta_data.py  image_profile_qr_code_list.py  image_profiles2.json  image_profiles_templates.json  share_parser.py
src/cli/: __init__.py  bootstrap_config.py  bootstrap_env.py  cli.py  cli_color_mapper.py  cli_color_maps.py  cli_colors.py  cli_config.py  cli_customizing.py  cli_demo.py  cli_share_parser.py  table_editor.py
src/code_analyzer/: module_analyzer.py  package_analyzer.py
src/config/: colors.py
src/demo/: demo_config.py
src/model/: model_calendar.py  model_celltype.py  model_code_artifacts.py  model_colors.py  model_config.py  model_datetime.py  model_emoji.py  model_file_tree.py  model_filter.py  model_graph.py  model_persistence.py  model_rendering.py  model_todo.py  model_tree.py  model_visualizer.py  model_worklog.py
src/scripts/: bat_list.py  browser_bookmarks.py  prompt.py  (+2 more)
test_config/: 20240916_shares.csv  config_env_template.json  file1_config.txt  sample_stocks_data.txt
test_path/: lorem_doc_root.md
tests/: conftest.py  test_file_analyzer.py
(+137 files in other folders)
