[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "hf_utils"
requires-python = ">=3.11"
description = "command line utils"
version = "0.1.0"
authors = [
    { name = "John Doe", email = "xyz@abc.com" }
]

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["./requirements/requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 71.0.0" ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
log_cli = true
log_cli_level = "INFO"
# log_cli_format = "%(message)s"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# file log options
# log_file = "pytest.log"
# log_file_level = "DEBUG"
# log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"





